--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,13 +52,23 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.26</version> 
 	    </dependency>
-		 <dependency>
-	        <groupId>org.springframework.cloud</groupId>
-	        <artifactId>spring-cloud-starter-openfeign</artifactId>
-	        <version>4.0.4</version>
-	    </dependency>
+	     <dependency>
+	       <groupId>org.springframework.cloud</groupId>
+	       <artifactId>spring-cloud-starter-openfeign</artifactId>
+	       <version>4.0.4</version>
+	   </dependency>
 	</dependencies>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
